fixed center align

--- a/skillset.css
+++ b/skillset.css
@@ -27,6 +27,8 @@ stroke-dashoffset:0
   padding: 0;
   text-align: center;
   margin: auto;
+  width: 100%;
+  
 }
 
 /* Circles */
